# NocodeXStudio

./: .gitignore  ARCHITECTURE.md  App.tsx  README.md  SDK_ENDPOINTS.md  build-desktop.js  build-installer.js  build_output.txt  constants.ts  fix.py  fix_json.js  index.css  index.html  index.tsx  neutralino.config.json  package-lock.json  package.json  patch-app.cjs  tsconfig.json  tsconfig.tsbuildinfo  types.ts  vite.config.ts
.tmp/: auth_info.json  window_state.config.json
app/: AppOverlays.tsx  EditorContent.tsx  PdfAnnotationCard.tsx  ScreenshotGalleryPanel.tsx  appHelpers.tsx  detachedConsoleWindow.ts  mediaWorkspaceHelpers.ts  pdfAnnotationActions.ts  pdfAnnotationHelpers.ts  previewCssHelpers.ts  previewFrameBridge.ts  previewSelectionHelpers.ts  previewUpdateHelpers.ts  projectFilesystem.ts  projectOpenRuntime.ts  useCodeEditorState.ts  usePreviewConsole.ts  usePreviewContentEditing.ts  usePreviewCreation.ts  usePreviewCssMutation.ts  usePreviewDocumentLoader.ts  usePreviewElementActions.ts  usePreviewFrameBridgeState.ts  usePreviewFrameMessages.ts  usePreviewGeometry.ts  usePreviewInspectorRuntime.ts  useScreenshotGallery.ts
components/: AnimationControls.tsx  BottomInspectorDock.tsx  CodeViewer.tsx  CodeWorkspace.tsx  ColorCodeEditor.tsx  CommandPalette.tsx  ConfigEditorModal.tsx  DetachedCodeEditorWindow.tsx  DynamicSections.tsx  DynamicStyles.tsx  EditorCanvas.tsx  FileExplorer.tsx  ImagesPanel.tsx  LayersPanel.tsx  MasterFeaturePanel.tsx  NLPAssistant.tsx  (+11 more)
native/cdp_bridge/: Cargo.toml
native/cdp_bridge/src/: ai.rs  cdp.rs  ipc.rs  logging.rs  main.rs
(+159 files in other folders)
