[package]
name = "cdp_bridge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
cuda = []

[dependencies]
anyhow = "1.0"
dirs = "6.0"
futures-util = "0.3"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
uuid = { version = "1.18", features = ["fast-rng", "v4"] }
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }
